--- a/partials/_challenge.html
+++ b/partials/_challenge.html
@@ -59,10 +59,10 @@
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4>The challenge is coming soon...</h4>
-                <h4 class="subheading">Save the date: 12/05/2018</h4>
+                <h4 class="subheading">Save the date: 19/05/2018</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">It's not long before the start is given! You can follow all the preparation on <a href="#">Twitter</a> or on the <a href="#">blog</a></p>
+                <p class="text-muted">It's not long before the start is given! You can follow all the preparation on the <a target="_blank" href="https://medium.com/@vanderstraeten.thomas">blog</a> of Thomas and the <a target="_blank" href="https://www.facebook.com/becode.org/">Facebook page</a> of BeCode!</p>
               </div>
             </div>
           </li>
