--- a/partials/_discover.html
+++ b/partials/_discover.html
@@ -11,7 +11,7 @@
       <div class="col-md-4">
         <img class="mx-auto rounded-circle medium-sized" src="img/logos/brussels.jpg" alt="">
         <h4 class="service-heading">A sponsored ultra-run around the Belgian capital</h4>
-        <p class="text-muted">In May 2018, Thomas Vanderstraeten will run a bit more than 60km along Brussels' Green Belt in one go, in a bid to attract interest on BeCode</p>
+        <p class="text-muted">On May 19th, Thomas Vanderstraeten will run a bit more than 60km along Brussels' Green Belt in one go, in a bid to attract interest on BeCode</p>
       </div>
       <div class="col-md-4">
         <img class="mx-auto rounded-circle medium-sized" src="img/logos/becode.png" alt="">
