--- a/partials/_footer.html
+++ b/partials/_footer.html
@@ -3,23 +3,18 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; 60km for BeCode 2017-2018</span>
+            <span class="copyright">Copyright &copy; 2018 <a href="https://cryptizens.io/" target="_blank">Cryptizens.io</a></span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-twitter"></i>
+                <a href="https://medium.com/@vanderstraeten.thomas" target="_blank">
+                  <i class="fa fa-medium"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/becode.org/" target="_blank">
                   <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-linkedin"></i>
                 </a>
               </li>
             </ul>
@@ -27,7 +22,7 @@
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a target="_blank" href="https://eightytwentylab.typeform.com/to/T70a1n">Contact</a>
               </li>
             </ul>
           </div>
