--- a/partials/_i18n.html
+++ b/partials/_i18n.html
@@ -30,6 +30,7 @@
                 faq: 'FAQ',
                 team: 'Team',
                 contact: 'Contact',
+                press: 'Press',
                 blog: 'Blog'
               },
               header: {
