--- a/partials/_support.html
+++ b/partials/_support.html
@@ -3,15 +3,15 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-md-4">
-        <button class="btn btn-xl">Share the word</button>
+        <a href="https://www.facebook.com/becode.org/"><button style="cursor: pointer;" class="btn btn-xl">Share the BeCode love</button></a>
         <p class="text-muted" style="padding-right: 20px; padding-left: 20px; padding-top: 30px;">The primary goal of this challenge is to spread the word on the existence of BeCode, so that more and more students can join and benefit from free tech education. Maybe your share will motivate someone to join!</p>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-xl-secondary">Donate</button>
+        <a href="https://eightytwentylab.typeform.com/to/Nyv2Vf"><button style="cursor: pointer;"class="btn btn-xl-secondary">Donate ETH</button></a>
         <p class="text-muted" style="padding-right: 20px; padding-left: 20px; padding-top: 30px;">Dive deep into an exciting new technology and perform your first crypto-currency transfer to the smart contract. What better recipient than a tech non-profit for this?</p>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-xl">Run with Thomas</button>
+        <a href="https://eightytwentylab.typeform.com/to/Nyv2Vf"><button class="btn btn-xl" style="cursor: pointer;">Run with Thomas</button></a>
         <p class="text-muted" style="padding-right: 20px; padding-left: 20px; padding-top: 30px;">60km is a long way to go, and happiness is best when it is shared. So, hop in your running shoes and join Thomas along the path to discover Brussels' best green areas. 1km, 5km, 10km...pick your game!</p>
       </div>
     </div>
