--- a/partials/_cause.html
+++ b/partials/_cause.html
@@ -8,19 +8,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-          <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <i class="fa fa-plus fa-3x"></i>
-            </div>
-          </div>
-          <img class="img-fluid" src="img/education.png" alt="">
-        </a>
-        <div class="portfolio-caption">
-          <h4>Scarce opportunities for tech education in Belgium</h4>
-        </div>
-      </div>
+
       <div class="col-md-4 col-sm-6 portfolio-item">
         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
           <div class="portfolio-hover">
@@ -32,6 +20,19 @@
         </a>
         <div class="portfolio-caption">
           <h4>A pressing need of tech talent in the industry</h4>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fa fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/education.png" alt="">
+        </a>
+        <div class="portfolio-caption">
+          <h4>Scarce opportunities for tech education in Belgium</h4>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 portfolio-item">
@@ -67,7 +68,8 @@
               <!-- Project Details Go Here -->
               <h2>Tech education in Belgium</h2>
               <img class="img-fluid d-block mx-auto img-modal" src="img/education.png" alt="">
-              <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+              <p>Whereas a large amount of digital job vacancies remain unfilled - and that number will increase dramatically in the years to come - most of these professions don't require an engineering degree at all. With a logical mindset, a lot of motivation and some basic training,
+anyone can learn to create mobile applications and websites and turn that into a profession! However, no mainstream educational structures exist to teach these skils en masse. This is a pity, as 23% of Belgian youth are currently unemployed.</p>
               <button class="btn btn-primary" data-dismiss="modal" type="button">
                 <i class="fa fa-times"></i>
                 Close</button>
@@ -95,7 +97,7 @@
                 <!-- Project Details Go Here -->
                 <h2>The need for tech talent</h2>
                 <img class="img-fluid d-block mx-auto img-modal" src="img/talent.png" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>It is expected that there will be about 30.000 vacancies in Belgium by 2020 due to shortfall of e-skilled workers. 70% of employers blame inadequate training for the shortfall in skilled workers.</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fa fa-times"></i>
                   Close</button>
@@ -123,7 +125,8 @@
                   <!-- Project Details Go Here -->
                   <h2>How BeCode bridges the gap</h2>
                   <img class="img-fluid d-block mx-auto img-modal" src="img/logos/becode.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>BeCode aims at providing competitive and responsible coding school programs, accessible to all. The program provides individual support for securing a sustainable profession. After launching its first center in Brussels with more than 100 people continuously in training and a first branch in Charleroi,
+BeCode is looking to open up all over the country, partnering with local stakeholders (private and public) working alongside future students and employers!</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close</button>
