--- a/partials/_faq.html
+++ b/partials/_faq.html
@@ -1,4 +1,4 @@
-<section id="faq" class="bg-light">
+<!-- <section id="faq" class="bg-light">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -49,4 +49,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
