--- a/partials/_flash.html
+++ b/partials/_flash.html
@@ -1,3 +1,3 @@
 <div id="flash" class="flash text-center align-middle">
-  <div class="flash__text">Already <span class="flash__text-highlight">XXX ETH</span> collected, and only <span class="flash__text-highlight">XX days</span> to go!</div>
+  <div class="flash__text">The Ethereum Smart contract is currently in test phase, <u><a style="font-weight: bold; color: white;" target="_blank" href="https://medium.com/@vanderstraeten.thomas">discover it here</a></u>! Fundraising start expected around April 15th</div>
 </div>
