--- a/partials/_navbar.html
+++ b/partials/_navbar.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">60km for BeCode</a>
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">Cryptorun for BeCode</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
@@ -20,17 +20,20 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#support" data-i18n="nav.support"></a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#team" data-i18n="nav.team"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#blog" data-i18n="nav.blog"></a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#faq" data-i18n="nav.faq"></a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#" data-i18n="nav.press"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#contact" data-i18n="nav.contact"></a>
+          <a class="nav-link js-scroll-trigger" target="_blank" href="https://medium.com/@vanderstraeten.thomas" data-i18n="nav.blog"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" target="_blank" href="https://eightytwentylab.typeform.com/to/T70a1n" data-i18n="nav.contact"></a>
         </li>
       </ul>
     </div>
