--- a/partials/_team.html
+++ b/partials/_team.html
@@ -1,5 +1,5 @@
 <!-- Team -->
-    <section class="bg-light" id="team">
+    <!-- <section class="bg-light" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -57,29 +57,8 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/anon.jpg" alt="">
-              <h4>XXX YYYY</h4>
-              <p class="text-muted">Running mentor</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
+
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
