--- a/partials/_footer.html
+++ b/partials/_footer.html
@@ -17,6 +17,11 @@
                   <i class="fa fa-facebook"></i>
                 </a>
               </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/thomasvds/cryptorun-back" target="_blank">
+                  <i class="fa fa-github"></i>
+                </a>
+              </li>
             </ul>
           </div>
           <div class="col-md-4">
