--- a/partials/_cause.html
+++ b/partials/_cause.html
@@ -3,14 +3,14 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Supporting a <span class="highlighted">great cause</span></h2>
-        <h3 class="section-subheading text-muted">Discover BeCode, enabling tomorrow's digital talent to blossom</h3>
+        <h2 class="section-heading" data-i18n="[html]cause.title"></h2>
+        <h3 class="section-subheading text-muted" data-i18n="cause.subtitle"></h3>
       </div>
     </div>
     <div class="row">
 
       <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
           <div class="portfolio-hover">
             <div class="portfolio-hover-content">
               <i class="fa fa-plus fa-3x"></i>
@@ -19,11 +19,11 @@
           <img class="img-fluid" src="img/talent.png" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>A pressing need of tech talent in the industry</h4>
+          <h4 data-i18n="cause.item_1.title"></h4>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
           <div class="portfolio-hover">
             <div class="portfolio-hover-content">
               <i class="fa fa-plus fa-3x"></i>
@@ -32,7 +32,7 @@
           <img class="img-fluid" src="img/education.png" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Scarce opportunities for tech education in Belgium</h4>
+          <h4 data-i18n="cause.item_2.title"></h4>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 portfolio-item">
@@ -45,7 +45,7 @@
           <img class="img-fluid" src="img/logos/becode.png" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>BeCode turbocharges tech education for all</h4>
+          <h4 data-i18n="cause.item_3.title"></h4>
         </div>
       </div>
     </div>
@@ -66,13 +66,11 @@
           <div class="col-lg-8 mx-auto">
             <div class="modal-body">
               <!-- Project Details Go Here -->
-              <h2>Tech education in Belgium</h2>
-              <img class="img-fluid d-block mx-auto img-modal" src="img/education.png" alt="">
-              <p>Whereas a large amount of digital job vacancies remain unfilled - and that number will increase dramatically in the years to come - most of these professions don't require an engineering degree at all. With a logical mindset, a lot of motivation and some basic training,
-anyone can learn to create mobile applications and websites and turn that into a profession! However, no mainstream educational structures exist to teach these skils en masse. This is a pity, as 23% of Belgian youth are currently unemployed.</p>
-              <button class="btn btn-primary" data-dismiss="modal" type="button">
-                <i class="fa fa-times"></i>
-                Close</button>
+              <h2 data-i18n="cause.item_1.subtitle"></h2>
+              <img class="img-fluid d-block mx-auto img-modal" src="img/talent.png" alt="">
+              <p data-i18n="cause.item_1.description"></p>
+              <button class="btn btn-primary" data-dismiss="modal" type="button" data-i18n="[html]cause.close">
+                <i class="fa fa-times"></i></button>
               </div>
             </div>
           </div>
@@ -95,12 +93,11 @@ anyone can learn to create mobile applications and websites and turn that into a
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2>The need for tech talent</h2>
-                <img class="img-fluid d-block mx-auto img-modal" src="img/talent.png" alt="">
-                <p>It is expected that there will be about 30.000 vacancies in Belgium by 2020 due to shortfall of e-skilled workers. 70% of employers blame inadequate training for the shortfall in skilled workers.</p>
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fa fa-times"></i>
-                  Close</button>
+                <h2 data-i18n="cause.item_2.subtitle"></h2>
+                <img class="img-fluid d-block mx-auto img-modal" src="img/education.png" alt="">
+                <p data-i18n="cause.item_2.description"></p>
+                <button class="btn btn-primary" data-dismiss="modal" type="button" data-i18n="[html]cause.close">
+                  <i class="fa fa-times"></i></button>
                 </div>
               </div>
             </div>
@@ -123,13 +120,11 @@ anyone can learn to create mobile applications and websites and turn that into a
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2>How BeCode bridges the gap</h2>
+                  <h2 data-i18n="cause.item_3.subtitle"></h2>
                   <img class="img-fluid d-block mx-auto img-modal" src="img/logos/becode.png" alt="">
-                  <p>BeCode aims at providing competitive and responsible coding school programs, accessible to all. The program provides individual support for securing a sustainable profession. After launching its first center in Brussels with more than 100 people continuously in training and a first branch in Charleroi,
-BeCode is looking to open up all over the country, partnering with local stakeholders (private and public) working alongside future students and employers!</p>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close</button>
+                  <p data-i18n="cause.item_3.description"></p>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button" data-i18n="[html]cause.close">
+                    </button>
                   </div>
                 </div>
               </div>
