--- a/partials/_challenge.html
+++ b/partials/_challenge.html
@@ -3,8 +3,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">A <span class="highlighted">crypto-currency</span> fundraising</h2>
-        <h3 class="section-subheading text-muted">Because supporting tech is better with tech</h3>
+        <h2 class="section-heading" data-i18n="[html]challenge.title"></h2>
+        <h3 class="section-subheading text-muted" data-i18n="challenge.subtitle"></h3>
       </div>
     </div>
     <div class="row">
@@ -16,11 +16,11 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Sponsoring is done by sending crypto-coins</h4>
-                <h4 class="subheading">Funds are collected in Ether</h4>
+                <h4 data-i18n="challenge.item_1.title"></h4>
+                <h4 class="subheading" data-i18n="challenge.item_1.subtitle"></h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Like in a traditional fundraising, funds will be collected for BeCode in exchange for Thomas' sporting feat. The exciting stuff is that these funds will be collected in <a href='https://en.wikipedia.org/wiki/Ethereum'>Ether</a>, a crypto-currency similar to <a href="https://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></p>
+                <p class="text-muted" data-i18n="[html]challenge.item_1.description"></p>
               </div>
             </div>
           </li>
@@ -30,11 +30,11 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Funds are publicly visible but safely locked</h4>
-                <h4 class="subheading">Secured in a smart contract</h4>
+                <h4 data-i18n="challenge.item_2.title"></h4>
+                <h4 class="subheading" data-i18n="challenge.item_2.subtitle"></h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">On the Ethereum network where they are stored, the funds can be safely consulted by all. It's just like a public ledger. The funds are locked in a snippet of code that is called a <a href="https://en.wikipedia.org/wiki/Smart_contract">smart contract</a>: a kind of contract that is responsible for its own execution</p>
+                <p class="text-muted" data-i18n="[html]challenge.item_2.description"></p>
               </div>
             </div>
           </li>
@@ -44,11 +44,11 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Only one key to release the funds to BeCode</h4>
-                <h4 class="subheading">The trigger: running 60km</h4>
+                <h4 data-i18n="challenge.item_3.title"></h4>
+                <h4 class="subheading" data-i18n="challenge.item_3.subtitle"></h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">The funds will be wired to BeCode only if Thomas records a 60km run through the <a href="https://www.strava.com/">Strava</a> running application, to which the smart contract is connected. Otherwise, the donors will get back their funds</p>
+                <p class="text-muted" data-i18n="[html]challenge.item_3.description"></p>
               </div>
             </div>
           </li>
@@ -58,22 +58,14 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>The challenge is coming soon...</h4>
-                <h4 class="subheading">Save the date: 19/05/2018</h4>
+                <h4 data-i18n="challenge.item_4.title"></h4>
+                <h4 class="subheading" data-i18n="challenge.item_4.subtitle"></h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">It's not long before the start is given! You can follow all the preparation on the <a target="_blank" href="https://medium.com/@vanderstraeten.thomas">blog</a> of Thomas and the <a target="_blank" href="https://www.facebook.com/becode.org/">Facebook page</a> of BeCode!</p>
+                <p class="text-muted" data-i18n="[html]challenge.item_4.description"></p>
               </div>
             </div>
           </li>
-          <!-- <li class="timeline-inverted hidden-xs">
-            <div class="timeline-image">
-              <h4>Support
-                <br>this
-                <br>challenge!</h4>
-              </div>
-            </li>
-          </ul> -->
         </div>
       </div>
     </div>
