--- a/partials/_discover.html
+++ b/partials/_discover.html
@@ -3,25 +3,25 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">An exciting <span class="highlighted">challenge</span></h2>
-        <h3 class="section-subheading text-muted">To raise awareness for the challenges faced by others</h3>
+        <h2 class="section-heading" data-i18n="[html]discover.title"></h2>
+        <h3 class="section-subheading text-muted" data-i18n="discover.subtitle"></h3>
       </div>
     </div>
     <div class="row text-center">
       <div class="col-md-4">
         <img class="mx-auto rounded-circle medium-sized" src="img/logos/brussels.jpg" alt="">
-        <h4 class="service-heading">A sponsored ultra-run around the Belgian capital</h4>
-        <p class="text-muted">On May 19th, Thomas Vanderstraeten will run a bit more than 60km along Brussels' Green Belt in one go, in a bid to attract interest on BeCode</p>
+        <h4 class="service-heading" data-i18n="discover.item_1.title"></h4>
+        <p class="text-muted" data-i18n="discover.item_1.description"></p>
       </div>
       <div class="col-md-4">
         <img class="mx-auto rounded-circle medium-sized" src="img/logos/becode.png" alt="">
-        <h4 class="service-heading">Raising awareness and funds for BeCode</h4>
-        <p class="text-muted">BeCode is a novel Belgian nonprofit providing free tech education to all, so that tomorrow's tech talents can blossom regardless of their background</p>
+        <h4 class="service-heading" data-i18n="discover.item_2.title"></h4>
+        <p class="text-muted" data-i18n="discover.item_2.description"></p>
       </div>
       <div class="col-md-4">
         <img class="mx-auto rounded-circle medium-sized" src="img/logos/blockchain.jpg" alt="">
-        <h4 class="service-heading">Running the fundraiser on Blockchain</h4>
-        <p class="text-muted">The fundraising will leverage new technology in an exciting way, using crypto-currencies and smart contracts to gather and free up the funds</p>
+        <h4 class="service-heading" data-i18n="discover.item_3.title"></h4>
+        <p class="text-muted" data-i18n="discover.item_3.description"></p>
       </div>
     </div>
   </div>
