--- a/partials/_navbar.html
+++ b/partials/_navbar.html
@@ -9,31 +9,31 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#discover" data-i18n="nav.discover"></a>
+          <a class="nav-link js-scroll-trigger" href="#discover" data-i18n="navbar.discover"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#portfolio" data-i18n="nav.be_code"></a>
+          <a class="nav-link js-scroll-trigger" href="#portfolio" data-i18n="navbar.be_code"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#challenge" data-i18n="nav.challenge"></a>
+          <a class="nav-link js-scroll-trigger" href="#challenge" data-i18n="navbar.challenge"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#support" data-i18n="nav.support"></a>
+          <a class="nav-link js-scroll-trigger" href="#support" data-i18n="navbar.support"></a>
         </li>
         <!-- <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#team" data-i18n="nav.team"></a>
+          <a class="nav-link js-scroll-trigger" href="#team" data-i18n="navbar.team"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#faq" data-i18n="nav.faq"></a>
+          <a class="nav-link js-scroll-trigger" href="#faq" data-i18n="navbar.faq"></a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#" data-i18n="nav.press"></a>
+          <a class="nav-link js-scroll-trigger" href="#" data-i18n="navbar.press"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" target="_blank" href="https://medium.com/@vanderstraeten.thomas" data-i18n="nav.blog"></a>
+          <a class="nav-link js-scroll-trigger" target="_blank" href="https://medium.com/@vanderstraeten.thomas" data-i18n="navbar.blog"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" target="_blank" href="https://eightytwentylab.typeform.com/to/T70a1n" data-i18n="nav.contact"></a>
+          <a class="nav-link js-scroll-trigger" target="_blank" href="mailto:thomas@cryptizens.io" data-i18n="navbar.contact"></a>
         </li>
       </ul>
     </div>
