--- a/partials/_footer.html
+++ b/partials/_footer.html
@@ -27,7 +27,7 @@
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
-                <a target="_blank" href="mailto:thomas@cryptizens.io">Contact</a>
+                <a target="_top" href="mailto:thomas@cryptizens.io">Contact</a>
               </li>
               <li class="list-inline-item">
                 <a target="_blank" href="https://cryptorun.brussels?lang=fr">FR</a>
