--- a/partials/_navbar.html
+++ b/partials/_navbar.html
@@ -33,7 +33,7 @@
           <a class="nav-link js-scroll-trigger" target="_blank" href="https://medium.com/@vanderstraeten.thomas" data-i18n="navbar.blog"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" target="_blank" href="mailto:thomas@cryptizens.io" data-i18n="navbar.contact"></a>
+          <a class="nav-link js-scroll-trigger" target="_top" href="mailto:thomas@cryptizens.io" data-i18n="navbar.contact"></a>
         </li>
       </ul>
     </div>
